added title heading and text for cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+<div class="title-bar">
+  <div class="title-text">
+    <img src="assets/images/profile-small.png" class="profile-img">
+    <h1>What I bring to the table.</h1>
+  </div>
+</div>
 
 <div class="row top-row">
   <div class="flip-container">
@@ -16,8 +22,11 @@
         <h4>Connector</h4>
   		</div>
   		<div class="back">
+        <img src="assets/images/reunion.png" class="back-img">
   			<!-- back content -->
-        <div class="back-text">I love connecting with people and learning more about them as individuals.  I believe the greatest asset to a team is diversity.  In order to be successful I believe you need a team of people behind you to help you along the way.</div>
+        <div class="back-text">
+          I love connecting with people and learning more about them as individuals.  I believe the greatest asset to a team is diversity.  In order to be successful I believe you need a team of people behind you to help you along the way.
+        </div>
   		</div>
   	</div>
   </div>
@@ -29,13 +38,17 @@
         <h4>Empathizer</h4>
   		</div>
   		<div class="back">
+        <img src="assets/images/teamwork.png" class="back-img">
   			<!-- back content -->
+        <div class="back-text">
+           I think that the most important quality someone can have is empathy.  The ability to dig deep into a part of yourself and feel what the other person is feeling is hugely powerful.
+        </div>
   		</div>
   	</div>
   </div>
 </div>
 
-<div class="row">
+<div class="row bottom-row">
   <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
   	<div class="flipper">
   		<div class="front">
@@ -44,8 +57,9 @@
         <h4>Amplifier</h4>
   		</div>
   		<div class="back">
+        <img src="assets/images/megaphone.png" class="back-img">
   			<!-- back content -->
-        <div class="back-text">I think that it is important to give credit where credit is due.</div>
+        <div class="back-text">I think that sometimes good ideas need a little boost.  I believe in giving others the space to express their thoughts and ideas.  I want to help people not by speaking over them but by supporting them.</div>
   		</div>
   	</div>
   </div>
@@ -58,6 +72,8 @@
   		</div>
   		<div class="back">
   			<!-- back content -->
+        <img src="assets/images/dog.png" class="back-img">
+        <div class="back-text">While I realise I cannot keep just petting other peoples dogs for the rest of my life, until I feel economically stable enough to get my own dog, I promise yours will not be disappointed by my petting ability.</div>
   		</div>
   	</div>
   </div>
