--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 
+  <link rel="shortcut icon" href="assets/images/nose.png">
+  <title>Pick Me</title>
+
 </head>
 
 <body>
